--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,7 @@
 TAGS
 Tests/conversions.xml
 Tests/about-equations.zip
-ege-api/target
-ege-framework/target
-ege-validator/target
-ege-webclient/target
-ege-webservice/target
-ege-xsl-converter/target
-oo-converter/target
-tei-converter/target
-tei-javalib/target
 Tests/temp-results
+target
 *.iml
 .idea
