--- a/jodconverter/pom.xml
+++ b/jodconverter/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.artofsolving.jodconverter</groupId>
-  <artifactId>jodconverter-core</artifactId>
+  <artifactId>jodconverter</artifactId>
   <version>3.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
