--- a/oo-converter/pom.xml
+++ b/oo-converter/pom.xml
@@ -176,7 +176,7 @@
     </dependency>
     <dependency>
         <groupId>org.artofsolving.jodconverter</groupId>
-        <artifactId>jodconverter-core</artifactId>
+        <artifactId>jodconverter</artifactId>
         <version>3.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
