--- a/ege-webservice/pom.xml
+++ b/ege-webservice/pom.xml
@@ -81,13 +81,12 @@
       <groupId>javax.servlet</groupId>
       <artifactId>servlet-api</artifactId>
       <version>2.3</version>
-      <scope>compile</scope>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>commons-fileupload</groupId>
       <artifactId>commons-fileupload</artifactId>
       <version>1.2.1</version>
-      <scope>compile</scope>
     </dependency>
       <dependency>
           <groupId>commons-io</groupId>
@@ -98,13 +97,11 @@
           <groupId>net.sf.jung</groupId>
           <artifactId>jung-algorithms</artifactId>
           <version>2.0.1</version>
-          <scope>compile</scope>
       </dependency>
       <dependency>
           <groupId>net.sf.jung</groupId>
           <artifactId>jung-visualization</artifactId>
           <version>2.0.1</version>
-          <scope>compile</scope>
       </dependency>
       <dependency>
           <groupId>net.sf.jung</groupId>
@@ -154,6 +151,12 @@
           <groupId>com.thaiopensource</groupId>
           <artifactId>trang</artifactId>
           <version>20091111</version>
+      </dependency>
+      <dependency>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <version>4.12</version>
+          <scope>test</scope>
       </dependency>
   </dependencies>
 </project>
